--- a/platformio.ini
+++ b/platformio.ini
@@ -12,3 +12,10 @@
 platform = espressif32
 board = esp32-s3-devkitc-1-n16r8v
 framework = arduino
+build_unflags = -std=gnu++11
+build_flags = -std=gnu++2a
+              -D ARDUINO_USB_MODE=0
+              -D ARDUINO_USB_CDC_ON_BOOT=0
+              -D CORE_DEBUG_LEVEL=3
+              -D LOG_LOCAL_LEVEL=3
+board_build.partitions = large_ffat_16MB.csv
