--- a/platformio.ini
+++ b/platformio.ini
@@ -12,6 +12,7 @@
 platform = espressif32
 board = esp32-s3-devkitc-1-n16r8v
 framework = arduino
+monitor_speed = 115200
 build_unflags = -std=gnu++11
 build_flags = -std=gnu++2a
               -D ARDUINO_USB_MODE=0
@@ -19,3 +20,4 @@ build_flags = -std=gnu++2a
               -D CORE_DEBUG_LEVEL=3
               -D LOG_LOCAL_LEVEL=3
 board_build.partitions = large_ffat_16MB.csv
+lib_deps = esphome/ESP32-audioI2S@^2.0.6
