--- a/platformio.ini
+++ b/platformio.ini
@@ -15,9 +15,11 @@ framework = arduino
 monitor_speed = 115200
 build_unflags = -std=gnu++11
 build_flags = -std=gnu++2a
-              -D ARDUINO_USB_MODE=0
-              -D ARDUINO_USB_CDC_ON_BOOT=0
-              -D CORE_DEBUG_LEVEL=3
-              -D LOG_LOCAL_LEVEL=3
+	-D ARDUINO_USB_MODE=0
+	-D ARDUINO_USB_CDC_ON_BOOT=0
+	-D CORE_DEBUG_LEVEL=3
+	-D LOG_LOCAL_LEVEL=3
 board_build.partitions = large_ffat_16MB.csv
-lib_deps = esphome/ESP32-audioI2S@^2.0.6
+lib_deps = 
+	esphome/ESP32-audioI2S@^2.0.6
+	fastled/FastLED@^3.6.0
