--- a/platformio.ini
+++ b/platformio.ini
@@ -23,3 +23,5 @@ board_build.partitions = large_ffat_16MB.csv
 lib_deps = 
 	esphome/ESP32-audioI2S@^2.0.6
 	fastled/FastLED@^3.6.0
+	waspinator/AccelStepper@^1.64
+	xreef/PCF8575 library@^1.1.1
