--- a/platformio.ini
+++ b/platformio.ini
@@ -1,13 +1,3 @@
-; PlatformIO Project Configuration File
-;
-;   Build options: build flags, source filter
-;   Upload options: custom upload port, speed and extra flags
-;   Library options: dependencies, extra library storages
-;   Advanced options: extra scripting
-;
-; Please visit documentation for the other options and examples
-; https://docs.platformio.org/page/projectconf.html
-
 [env:esp32-s3-devkitc-1-n16r8v]
 platform = espressif32
 board = esp32-s3-devkitc-1-n16r8v
@@ -20,8 +10,8 @@ build_flags = -std=gnu++2a
 	-D CORE_DEBUG_LEVEL=3
 	-D LOG_LOCAL_LEVEL=3
 board_build.partitions = large_ffat_16MB.csv
-lib_deps = 
+lib_deps =
 	esphome/ESP32-audioI2S@^2.0.6
 	fastled/FastLED@^3.6.0
-	waspinator/AccelStepper@^1.64
+	laurb9/StepperDriver@^1.4.1
 	xreef/PCF8575 library@^1.1.1
