--- a/platformio.ini
+++ b/platformio.ini
@@ -1,17 +1,16 @@
 [env:esp32-s3-devkitc-1-n16r8v]
 platform = espressif32
 board = esp32-s3-devkitc-1-n16r8v
-framework = arduino
+framework = espidf, arduino
 monitor_speed = 115200
 build_unflags = -std=gnu++11
 build_flags = -std=gnu++2a
-	-D ARDUINO_USB_MODE=0
-	-D ARDUINO_USB_CDC_ON_BOOT=0
-	-D CORE_DEBUG_LEVEL=3
-	-D LOG_LOCAL_LEVEL=3
+	-DARDUINO_USB_MODE=1
+	-DARDUINO_USB_CDC_ON_BOOT=1
 board_build.partitions = large_ffat_16MB.csv
 lib_deps =
-	esphome/ESP32-audioI2S@^2.0.6
+	https://github.com/schreibfaul1/ESP32-audioI2S#master
 	fastled/FastLED@^3.6.0
 	laurb9/StepperDriver@^1.4.1
 	xreef/PCF8575 library@^1.1.1
+	gin66/FastAccelStepper@0.30.11
