--- a/platformio.ini
+++ b/platformio.ini
@@ -1,3 +1,13 @@
+; PlatformIO Project Configuration File
+;
+;   Build options: build flags, source filter
+;   Upload options: custom upload port, speed and extra flags
+;   Library options: dependencies, extra library storages
+;   Advanced options: extra scripting
+;
+; Please visit documentation for the other options and examples
+; https://docs.platformio.org/page/projectconf.html
+
 [env:esp32-s3-devkitc-1-n16r8v]
 platform = espressif32
 board = esp32-s3-devkitc-1-n16r8v
@@ -8,9 +18,10 @@ build_flags = -std=gnu++2a
 	-DARDUINO_USB_MODE=1
 	-DARDUINO_USB_CDC_ON_BOOT=1
 board_build.partitions = large_ffat_16MB.csv
-lib_deps =
+lib_deps = 
 	https://github.com/schreibfaul1/ESP32-audioI2S#master
 	fastled/FastLED@^3.6.0
 	laurb9/StepperDriver@^1.4.1
 	xreef/PCF8575 library@^1.1.1
 	gin66/FastAccelStepper@0.30.11
+	me-no-dev/ESP Async WebServer@^1.2.4
